# healthcare_dashboard

./: .env.example  .gitignore  README.md  render.yaml
.github/workflows/: deploy.yml
backend/: .env.example  main.py  pyproject.toml
backend/api/routes/: forecast.py  indicators.py  signal.py
backend/data/: ingestion.py  storage.py  validation.py
backend/features/: engineering.py  preprocessing.py  preprocessing_config.yaml
backend/models/: baseline.py  evaluate.py  prophet_model.py  registry.py  sarimax_model.py
backend/models/artifacts/: model_metadata.json
backend/scheduler/: jobs.py
docs/: helper_doc.md  next_steps.md
frontend/: .env.example  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: EmploymentTrendPanel.jsx  ForecastTable.jsx  HeadlineSignal.jsx  LeadingIndicatorsPanel.jsx  MethodologySection.jsx  WagePressurePanel.jsx
frontend/src/hooks/: useDashboardData.js
notebooks/: 01_data_exploration.ipynb  02_stationarity_analysis.ipynb  03_feature_validation.ipynb  04_model_comparison.ipynb  05_backtesting_results.ipynb
